took out unnecessary things and added a brace

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 #div1{
-<<<<<<< HEAD
+
 	width: 150px;
 	height: 70px;
 	display: block;
@@ -26,8 +26,8 @@
 	height: 90px;
 	width: 130px;
 }
-=======
-border-style: solid;
+
+border-style:{ solid;
 	height:650px;
 	width:1340px
 	
